[package]
name = "render-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
rayon = "1.5"
lazy_static = "1"
