[package]
name = "render-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1

[dependencies]
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
rayon = "1.5"
pixels =  "0.10.0"
winit = "0.27"
winit_input_helper = "0.13"
